[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
curve25519-dalek = "4.1.3"
ff = "0.13.1"
halo2_gadgets = "0.3.1"
halo2_poseidon = "0.1.0"
halo2_proofs = "0.3.0"
memmap2 = "0.9.5"
oid-registry = "0.8.1"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
pasta_curves = "0.5.1"
primitive-types = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
rand_core = "0.6.4"
rustls = "0.23.28"
sha3 = "0.10.8"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.13.1"
tonic-web = "0.13.1"
x509-parser = "0.17.0"

[build-dependencies]
tonic-build = "0.13.1"
