[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
ff = "0.13.1"
futures = "0.3.31"
halo2_gadgets = "0.3.1"
halo2_poseidon = "0.1.0"
halo2_proofs = "0.3.0"
hyper = { version = "1.6.0", features = ["full"] }
memmap2 = "0.9.5"
oid-registry = "0.8.1"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
pasta_curves = "0.5.1"
primitive-types = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
rand_core = "0.6.4"
rcgen = "0.13.2"
rustls = "0.23.28"
sha3 = "0.10.8"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
tonic = { version = "0.13.1", features = ["channel", "gzip", "server", "_tls-any"] }
tonic-web = "0.13.1"
tower = "0.5.2"
x509-parser = "0.17.0"

[build-dependencies]
tonic-build = "0.13.1"
